# eleven-bit-clock

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/dns_server/: CMakeLists.txt
components/dns_server/include/: dns_server.h
main/: CMakeLists.txt  Kconfig.projbuild  clock.c  notification.c  response.html  root.html  secrets_rename.h  setup_root.html  style.css  timezones.csv
